--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,138 @@
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 alpaca-py==0.21.2
 annotated-types==0.7.0
+anyio==4.3.0
 asttokens==2.4.1
+astunparse==1.6.3
+attrs==23.2.0
 certifi==2024.2.2
+chardet==5.2.0
 charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.6.1
+einops==0.8.0
 executing==2.0.1
+faiss-cpu==1.8.0
+filelock==3.14.0
+finnhub-python==2.4.19
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.5.0
+gast==0.5.4
+google-pasta==0.2.0
+greenlet==3.0.3
+grpcio==1.64.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.2
 idna==3.7
+intel-openmp==2021.4.0
 ipykernel==6.29.4
 ipython==8.24.0
+isodate==0.6.1
 jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-path==0.3.2
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+keras==3.3.3
+lazy-object-proxy==1.10.0
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+mkl==2021.4.0
+ml-dtypes==0.3.2
+more-itertools==10.2.0
+motor==3.4.0
+mpmath==1.3.0
 msgpack==1.0.8
+multidict==6.0.5
+namex==0.0.8
 nest-asyncio==1.6.0
+networkx==3.3
 numpy==1.26.4
+openai==1.30.3
+openapi-core==0.19.1
+openapi-schema-validator==0.6.2
+openapi-spec-validator==0.7.1
+opt-einsum==3.3.0
+optree==0.11.0
 packaging==24.0
 pandas==2.2.2
+parse==1.20.1
 parso==0.8.4
+pathable==0.4.3
 platformdirs==4.2.2
+prance==23.6.21.0
 prompt-toolkit==3.0.43
+protobuf==4.25.3
 psutil==5.9.8
 pure-eval==0.2.2
+pybars4==0.9.13
 pydantic==2.7.1
+pydantic-settings==2.2.1
 pydantic_core==2.18.2
 Pygments==2.18.0
+PyMeta3==0.5.1
+pymongo==4.7.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==26.0.3
+referencing==0.31.1
+regex==2023.12.25
 requests==2.32.2
+rfc3339-validator==0.1.4
+rich==13.7.1
+rpds-py==0.18.1
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+safetensors==0.4.3
+scipy==1.13.1
+semantic-kernel==1.0.2
+setuptools==70.0.0
 six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.30
 sseclient-py==1.8.0
 stack-data==0.6.3
+sympy==1.12
+tbb==2021.12.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-cpu==2.16.1
+tensorflow-intel==2.16.1
+termcolor==2.4.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+torch==2.3.0
 tornado==6.4
+tqdm==4.66.4
 traitlets==5.14.3
+transformers==4.41.1
 typing_extensions==4.12.0
 tzdata==2024.1
 urllib3==2.2.1
 wcwidth==0.2.13
 websockets==12.0
+Werkzeug==3.0.3
+wheel==0.43.0
+wrapt==1.16.0
+yarl==1.9.4
