--- a/requirements.txt
+++ b/requirements.txt
@@ -2,30 +2,55 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+asttokens==2.4.1
 attrs==23.2.0
+azure-common==1.1.28
+azure-core==1.30.1
+azure-identity==1.16.0
+azure-mgmt-containerinstance==10.1.0
+azure-mgmt-core==1.4.0
+black==24.4.2
 certifi==2024.2.2
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
+comm==0.2.2
+cryptography==42.0.7
+debugpy==1.8.1
+decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
 dnspython==2.6.1
+executing==2.0.1
+finnhub-python==2.4.19
 frozenlist==1.4.1
 grpcio==1.64.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+ipykernel==6.29.4
+ipython==8.24.0
 isodate==0.6.1
+jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.22.0
 jsonschema-path==0.3.2
 jsonschema-specifications==2023.12.1
+jupyter-black==0.3.4
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 lazy-object-proxy==1.10.0
 MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
 more-itertools==10.2.0
 motor==3.4.0
+msal==1.28.0
+msal-extensions==1.1.0
 multidict==6.0.5
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.30.4
@@ -35,18 +60,30 @@ openapi-spec-validator==0.7.1
 packaging==24.0
 pandas==2.2.2
 parse==1.20.1
+parso==0.8.4
 pathable==0.4.3
+pathspec==0.12.1
+platformdirs==4.2.2
+portalocker==2.8.2
 prance==23.6.21.0
+prompt_toolkit==3.0.45
+psutil==5.9.8
+pure-eval==0.2.2
 pybars4==0.9.13
+pycparser==2.22
 pydantic==2.7.2
 pydantic-settings==2.2.1
 pydantic_core==2.18.3
+Pygments==2.18.0
+PyJWT==2.8.0
 PyMeta3==0.5.1
 pymongo==4.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
+pyzmq==26.0.3
 referencing==0.31.1
 regex==2023.12.25
 requests==2.32.3
@@ -58,9 +95,14 @@ scipy==1.13.1
 semantic-kernel==1.0.3
 six==1.16.0
 sniffio==1.3.1
+stack-data==0.6.3
+tokenize-rt==5.2.0
+tornado==6.4
 tqdm==4.66.4
+traitlets==5.14.3
 typing_extensions==4.12.0
 tzdata==2024.1
 urllib3==2.2.1
+wcwidth==0.2.13
 Werkzeug==3.0.3
 yarl==1.9.4
