--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+alpaca-py==0.22.0
 annotated-types==0.7.0
 anyio==4.4.0
 asttokens==2.4.1
@@ -21,6 +22,7 @@ cryptography==42.0.7
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
+deprecation==2.1.0
 distro==1.9.0
 dnspython==2.6.1
 executing==2.0.1
@@ -49,6 +51,7 @@ more-itertools==10.2.0
 motor==3.4.0
 msal==1.28.0
 msal-extensions==1.1.0
+msgpack==1.0.3
 multidict==6.0.5
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
@@ -95,6 +98,7 @@ scipy==1.13.1
 semantic-kernel==1.0.3
 six==1.16.0
 sniffio==1.3.1
+sseclient-py==1.8.0
 stack-data==0.6.3
 tokenize-rt==5.2.0
 tornado==6.4
@@ -102,7 +106,9 @@ tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.0
 tzdata==2024.1
-urllib3==2.2.1
+urllib3==1.26.18
 wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==10.4
 Werkzeug==3.0.3
 yarl==1.9.4
