--- a/src/agent-app/Dockerfile
+++ b/src/agent-app/Dockerfile
@@ -17,4 +17,6 @@ COPY . /app
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
 
+EXPOSE 5000
+
 CMD ["python", "debug.py"]
