--- a/src/fsharp-app/fsharp-app.fsproj
+++ b/src/fsharp-app/fsharp-app.fsproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>fsharp_app</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Utils.fs" />
+    <Compile Include="Controllers\HealthController.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
 </Project>
