--- a/src/agent-app/Dockerfile
+++ b/src/agent-app/Dockerfile
@@ -1,15 +1,20 @@
-FROM python:3-slim
+FROM python:3.13-slim
 
 EXPOSE 5000
 EXPOSE 5678
 
 ENV PYTHONDONTWRITEBYTECODE=1
-
 ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc build-essential && \
+    apt-get install -y --no-install-recommends gcc build-essential curl && \
+    curl -sL https://aka.ms/InstallAzureCLIDeb | bash && \
+    apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && \
+    mkdir -p /home/appuser/.azure && \
+    chown -R appuser:appuser /home/appuser/.azure
 
 COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
@@ -17,8 +22,7 @@ RUN python -m pip install -r requirements.txt
 WORKDIR /app
 COPY . /app
 
-RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+RUN chown -R appuser /app
 USER appuser
 
 CMD ["python", "app.py"]
-
