--- a/src/rust-app/Cargo.toml
+++ b/src/rust-app/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-actix-web = "4.0"
+actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+reqwest = { version = "0.11", features = ["json"] }  # Enable `json` feature
+tokio = { version = "1", features = ["full"] }
 
 [[bin]]
 name = "health_check"
