--- a/src/agent-app/requirements.txt
+++ b/src/agent-app/requirements.txt
@@ -15,7 +15,7 @@ openai
 pandas
 semantic-kernel
 finnhub-python
-flask
+flask[async]
 gunicorn
 pydantic
 flask_pydantic
@@ -29,4 +29,7 @@ langchain-core
 langchain-openai
 azure-search-documents
 wikipedia
+duckduckgo-search
+playwright
+lxml
 
