--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,7 @@
 {
-    "version": "0.2.0",
     "configurations": [
         {
-            "name": "Docker: Python - Flask",
+            "name": "Docker: Python - General",
             "type": "docker",
             "request": "launch",
             "preLaunchTask": "docker-run: debug",
@@ -13,24 +12,8 @@
                         "remoteRoot": "/app"
                     }
                 ],
-                "projectType": "flask"
+                "projectType": "general"
             }
-        },
-        {
-            "name": "Python: Remote Attach",
-            "type": "debugpy",
-            "request": "attach",
-            "connect": {
-                "host": "localhost",
-                "port": 5678
-            },
-            "pathMappings": [
-                {
-                    "localRoot": "${workspaceFolder}",
-                    "remoteRoot": "/app"
-                }
-            ],
-            "justMyCode": true
         }
     ]
 }
