--- a/src/chat-interface/Dockerfile
+++ b/src/chat-interface/Dockerfile
@@ -1,28 +1,57 @@
 FROM python:3.13-slim
 
-EXPOSE 5000
-EXPOSE 5678
-
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
+# Install necessary packages
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc build-essential curl && \
+    apt-get install -y --no-install-recommends gcc build-essential curl nginx && \
     curl -sL https://aka.ms/InstallAzureCLIDeb | bash && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN adduser -u 5678 --disabled-password --gecos "" appuser && \
-    mkdir -p /home/appuser/.azure && \
-    chown -R appuser:appuser /home/appuser/.azure
+# Environment variables
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
-COPY requirements.txt .
+# Create appuser and directories
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && \
+    mkdir -p /home/appuser/.azure /app && \
+    chown -R appuser:appuser /home/appuser /app
+
+# Update permissions for the NGINX directories
+RUN mkdir -p /var/lib/nginx/body && \
+    chown -R appuser:appuser /var/lib/nginx && \
+    chmod -R 755 /var/lib/nginx
+
+RUN mkdir -p /var/log/nginx && \
+chown -R appuser:appuser /var/log/nginx && \
+chmod -R 755 /var/log/nginx
+
+RUN mkdir -p /run && \
+    chown -R appuser:appuser /run && \
+    chmod -R 755 /run
+
+RUN mkdir -p /app/logs && \
+    chown -R appuser:appuser /app/logs && \
+    chmod -R 755 /app/logs
+
+
+# Install Python dependencies
+COPY requirements.txt /app/
+WORKDIR /app
 RUN python -m pip install -r requirements.txt
 
-WORKDIR /app
+# Copy application code
 COPY . /app
 
+# Copy NGINX configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Permissions and set user
 RUN chown -R appuser /app
 USER appuser
 
-CMD ["python", "app.py"]
+# Expose necessary ports
+EXPOSE 80
+EXPOSE 443
+
+# Command to run both NGINX and Gunicorn
+CMD ["sh", "-c", "nginx && gunicorn -b 127.0.0.1:5000 --workers 3 app:app"]
