--- a/src/rust-app/Cargo.toml
+++ b/src/rust-app/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-actix-web = "4"
+actix-web = "4.0"
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }  # Enable `json` feature
+uuid = { version = "1.3", features = ["v4"] }
 tokio = { version = "1", features = ["full"] }
 
 [[bin]]
