--- a/src/chat-interface/Dockerfile
+++ b/src/chat-interface/Dockerfile
@@ -2,10 +2,12 @@ FROM python:3.13-slim
 
 # Install necessary packages
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc build-essential curl nginx && \
+    apt-get install -y --no-install-recommends \
+        gcc build-essential curl nginx supervisor && \
     curl -sL https://aka.ms/InstallAzureCLIDeb | bash && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
 
 # Environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -45,13 +47,15 @@ COPY . /app
 # Copy NGINX configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
 # Permissions and set user
 RUN chown -R appuser /app
 USER appuser
 
 # Expose necessary ports
 EXPOSE 80
-EXPOSE 443
 
 # Command to run both NGINX and Gunicorn
-CMD ["sh", "-c", "nginx && gunicorn -b 127.0.0.1:5000 --workers 3 app:app"]
+#CMD ["sh", "-c", "nginx && gunicorn -b 127.0.0.1:5000 --workers 3 app:app"]
+CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
