Try removing liveness probe

--- a/src/chat-interface/supervisord.conf
+++ b/src/chat-interface/supervisord.conf
@@ -4,11 +4,14 @@ nodaemon=true
 [program:nginx]
 command=nginx -g "daemon off;"
 autostart=true
-autorestart=true
-priority=10
+autorestart=false
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
 
 [program:gunicorn]
-command=gunicorn -b 127.0.0.1:5000 --workers 3 --access-logfile - --error-logfile - app:app
+command=gunicorn -b 127.0.0.1:8000 --workers 3 app:app
 autostart=true
-autorestart=true
-priority=20
+autorestart=false
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+
