--- a/src/chat-interface/Dockerfile
+++ b/src/chat-interface/Dockerfile
@@ -1,61 +1,37 @@
 FROM python:3.13-slim
 
-# Install necessary packages
+# Install necessary packages in a single RUN command
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         gcc build-essential curl nginx supervisor && \
     curl -sL https://aka.ms/InstallAzureCLIDeb | bash && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
-# Environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Create appuser and directories
+# Create directories and set permissions
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && \
-    mkdir -p /home/appuser/.azure /app && \
-    chown -R appuser:appuser /home/appuser /app
+    mkdir -p /home/appuser/.azure /app /app/logs /var/lib/nginx/body /var/log/nginx /run && \
+    chown -R appuser:appuser /home/appuser /app /app/logs /var/lib/nginx /var/log/nginx /run && \
+    chmod -R 755 /var/lib/nginx /var/log/nginx /run /app/logs
 
-# Update permissions for the NGINX directories
-RUN mkdir -p /var/lib/nginx/body && \
-    chown -R appuser:appuser /var/lib/nginx && \
-    chmod -R 755 /var/lib/nginx
-
-RUN mkdir -p /var/log/nginx && \
-chown -R appuser:appuser /var/log/nginx && \
-chmod -R 755 /var/log/nginx
-
-RUN mkdir -p /run && \
-    chown -R appuser:appuser /run && \
-    chmod -R 755 /run
-
-RUN mkdir -p /app/logs && \
-    chown -R appuser:appuser /app/logs && \
-    chmod -R 755 /app/logs
-
-
-# Install Python dependencies
-COPY requirements.txt /app/
+# Set working directory and copy dependencies
 WORKDIR /app
-RUN python -m pip install -r requirements.txt
+COPY --chown=appuser:appuser requirements.txt /app/
+RUN python -m pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . /app
-
-# Copy NGINX configuration
+# Copy application code and configurations
+COPY --chown=appuser:appuser . /app
 COPY nginx.conf /etc/nginx/nginx.conf
-
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Permissions and set user
-RUN chown -R appuser /app
-USER appuser
-
-# Expose necessary ports
 EXPOSE 80
 
-# Command to run both NGINX and Gunicorn
-#CMD ["sh", "-c", "nginx && gunicorn -b 127.0.0.1:5000 --workers 3 app:app"]
+RUN setcap 'cap_net_bind_service=+ep' /usr/sbin/nginx
+
+USER appuser
+
+# Use supervisord to run both NGINX and Gunicorn
 CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
